<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/radio_am_fragment_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimens40sp" />

    <Button
        android:id="@+id/radio_am_changed_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/radio_am_fragment_changed_music_main_fragment"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimens40sp" />

    <Button
        android:id="@+id/radio_am_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/back_button_text"
        android:layout_marginTop="@dimen/dimens80dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimens40sp" />

</RelativeLayout>
